syntax = "proto3";

package pb;
import "barber/service_categories.proto";
option go_package = "barbershop/src/pb/barber";


message CreateServiceCategoryRequest {
    string name = 1;
    string barber_shop_id = 2;
}

message CreateServiceCategoryResponse {
    ServiceCategories service_category = 1;
}