syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message ServiceCategory {
    string id = 1;
    string shop_id = 2;
    string name = 3;
    int32 gender = 6;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    string chain_id = 7;
}